--- a/src/css/StockMediaBox.css
+++ b/src/css/StockMediaBox.css
@@ -1,3 +1,10 @@
+.MediaBox {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
+  align-items: center;
+}
+
 .MediaBox .input-container {
   position: relative;
   width: 190%;
@@ -11,8 +18,6 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 35px;
   background: rgba(255, 255, 255, 0.2);
-  box-sizing: border-box;
-  position: relative;
   font-size: 1vw;
   grid-column: 1;
 }
